WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258290
REGRESSION(
262797@main
): Menu permanently opened on github.com
https://bugs.webkit.org/show_bug.cgi?id=258290
Summary
REGRESSION(262797@main): Menu permanently opened on github.com
Kdwk
Reported
2023-06-19 19:04:27 PDT
Created
attachment 466762
[details]
Screenshot of menu being open on github.com 1. Visit github.com/WebKit/WebKit/pulls 2. Menu is permanently opened
Attachments
Screenshot of menu being open on github.com
(43.48 KB, image/png)
2023-06-19 19:04 PDT
,
Kdwk
no flags
Details
Screencast showing how to work around the problem
(1.30 MB, video/webm)
2023-07-22 07:22 PDT
,
Kdwk
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2023-06-20 06:27:16 PDT
It seems you see a different version of github.com than I do. I don't have any of those buttons.
Kdwk
Comment 2
2023-06-20 06:43:48 PDT
You might want to try to fully reload the website by clicking on the URL bar and pressing Enter. GitHub has redesigned their website.
Michael Catanzaro
Comment 3
2023-06-20 06:59:27 PDT
Not for me. I think you're part of a test cohort.
Michael Catanzaro
Comment 4
2023-06-20 11:35:28 PDT
***
Bug 258306
has been marked as a duplicate of this bug. ***
Michael Catanzaro
Comment 5
2023-06-20 13:09:49 PDT
(In reply to Michael Catanzaro from
comment #3
)
> Not for me. I think you're part of a test cohort.
Well I've got the new version now. Dang, that's a seriously annoying menu. :P
Calvin Walton
Comment 6
2023-06-28 10:02:10 PDT
For folks who don't see the updated UI, you may be able to enable it. Under the user menu, choose "Feature preview" and enable "Global Navigation Update". You may also be able to use that menu to disable it if it has been enabled automatically.
Kdwk
Comment 7
2023-07-22 07:22:08 PDT
Created
attachment 467089
[details]
Screencast showing how to work around the problem Disabling `display: revert` seems to do the trick
Carlos Garcia Campos
Comment 8
2023-08-02 03:34:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16309
Michael Catanzaro
Comment 9
2023-08-02 05:57:59 PDT
Good work! I am going to backport
https://commits.webkit.org/261193@main
to webkitglib/2.40, which is additionally required to fix this bug in stable.
EWS
Comment 10
2023-08-02 06:05:40 PDT
Committed
266510@main
(476e8fbe38b0): <
https://commits.webkit.org/266510@main
> Reviewed commits have been landed. Closing PR #16309 and removing active labels.
Michael Catanzaro
Comment 11
2023-08-02 06:14:33 PDT
(In reply to Michael Catanzaro from
comment #9
)
> Good work! > > I am going to backport
https://commits.webkit.org/261193@main
to > webkitglib/2.40, which is additionally required to fix this bug in stable.
Hm, the popover attribute doesn't exist in Safari stable at all. But backporting this commit is sufficient to fix the bug with github.com. So I guess I'll do that. I'm nervous that this is enabling some web feature that is not fully-baked yet and may cause regressions on other websites, because there are lots more recent popover commits that I haven't sorted through and am not backporting, but fixing github.com seems most important.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug