REGRESSION(262797@main): Menu permanently opened on github.com https://bugs.webkit.org/show_bug.cgi?id=258290

Reviewed by Michael Catanzaro.

In 262797@main popover attribute was disabled for apple apps linkking to
the older SDKs, but also for non-apple ports. What happens in github now
is that the popover is never hidden because display: revert ends up in
block. This is because the popover css, which sets display: none when
popover-open is not present, is not included for any element.

* Source/WebKit/Shared/WebPreferencesDefaultValues.cpp:
(WebKit::defaultPopoverAttributeEnabled): Enable it by default for non-apple ports again.

Canonical link: https://commits.webkit.org/266510@main